# FluidSimulatorHW

./: .gitignore  CMakeLists.txt  Fixed.hpp  _Simulator.hpp  compile.ps1  input.txt  main.cpp  second_main.cpp  Отчёт.docx
include/: BetterSimulator.hpp  CustomConcepts.h  Field.h  Fixed.h  Fixed.hpp  FluidBehaviourSimulator.h  Simulator.hpp  TypeChecker.h
src/: Fixed.tpp
